--- a/src/container/pages/Home/styles.scss
+++ b/src/container/pages/Home/styles.scss
@@ -2,5 +2,112 @@
 @import "../../../assets/styles/helper/function", "../../../assets/styles/helper/mixin",  "../../../assets/styles/helper/variables";
 
 .p-home {
-  
+  background-color: #1f1f1f;
+  min-height: 100vh;
+  .home-content {
+    display: table;
+    width: 100%;
+    background-color: #7b7d7a;
+    min-height: 100vh;
+  }
+  .content-pokemon-details {
+    display: table-cell;
+    width: 1023px;
+    height: 100vh;
+    vertical-align: middle;
+    padding: 4rem;
+    .card-wrapper {
+      @include clearfix();
+      .a-card {
+        .card-detail {
+          position: relative;
+          p {
+            margin-bottom: 0;
+          }
+          .card-image {
+            background-color: blue;
+            width: auto;
+            height: 250px;
+            border-radius: 5px;
+            color: black;
+          }
+          .card-info {
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 0 24px 24px;
+            .text-info,
+            .type-info {
+              height: 0;
+              transition: all .25s ease;
+              overflow: hidden;
+              color: black;
+            }
+          }
+        }
+        &:hover {
+          transform: translateY(-5px);
+          .card-info {
+            .text-info {
+              height: 3.2rem;
+              font-size: 2.4rem;
+              margin-bottom: 0.8rem;
+              @include large {
+                font-size: 3.2rem;
+              }
+            }
+            .type-info {
+              height: 2.4rem;
+              font-size: 1.4rem;
+              @include large {
+                font-size: 1.6rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .content-pokemon-list,
+  .content-my-pokemon-list {
+    display: table-cell;
+    width: 1023px;
+    height: 100vh;
+    vertical-align: middle;
+    text-align: center;
+    padding: 4rem;
+    @include clearfix();
+    ul {
+      margin-left: 0;
+      li {
+        list-style-type: none;
+        @include medium {
+          .a-button {
+            float: left;
+          }
+          &:nth-child(2n) {
+            .a-button {
+              margin-right: 0;
+            }
+          }
+        }
+        @include large {
+          .a-button {
+            float: left;
+          }
+          &:nth-child(2n) {
+            .a-button {
+              margin-right: 24px;
+            }
+          }
+          &:nth-child(4n) {
+            .a-button {
+              margin-right: 0;
+            }
+          }
+        }
+      }
+    }
+  }
 }
