--- a/src/components/atoms/Button/styles.scss
+++ b/src/components/atoms/Button/styles.scss
@@ -9,6 +9,8 @@
   margin-right: 24px;
   border: 1px solid #989c97;
   cursor: pointer;
+  font-size: 14px;
+  text-transform: capitalize;
   transition: all .25s ease;
   &:hover {
     background-color: #989c97;
