--- a/src/components/atoms/Button/styles.scss
+++ b/src/components/atoms/Button/styles.scss
@@ -22,7 +22,7 @@
     &:hover {
       background-color: #989c97;
     }
-    a {
+    .anchor-button {
       position: absolute;
       top: 0;
       left: 0;
@@ -30,11 +30,14 @@
       height: 100%;
       z-index: 2;
     }
-    p {
+    button {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      font-size: 14px;
+      text-transform: capitalize;
+      background-color: transparent;
     }
   }
   @include medium {
