--- a/src/components/atoms/Card/styles.scss
+++ b/src/components/atoms/Card/styles.scss
@@ -2,36 +2,15 @@
 @import "../../../assets/styles/helper/function", "../../../assets/styles/helper/mixin",  "../../../assets/styles/helper/variables";
 
 .a-card {
+  max-width: 500px;
   width: 100%;
-  height: 250px;
-  float: left;
-  margin-bottom: 0.8rem;
-  border-radius: 5px;
-  position: relative;
-  z-index: 1;
-  transition: all .25s ease;
-  &:hover {
-    transform: translateY(-5px);
-  }
-  @include medium {
-    width: 50%;
-    margin-bottom: 1.2rem;
-  }
+  height: auto;
   @include large {
-    width: 25%;
-  }
-  .card-anchor {
-    position: absolute;
-    top: 0;
-    left: 0;
+    max-width: 250px;
     width: 100%;
-    height: 100%;
-    cursor: pointer;
-    z-index: 2;
-    padding: 0;
-    text-decoration: none;
-    @include medium {
-      padding: 0 1.2rem;
-    }
+    height: 250px;
+  }
+  img {
+    width: 400px;
   }
 }
