--- a/src/container/pages/Home/styles.scss
+++ b/src/container/pages/Home/styles.scss
@@ -10,13 +10,6 @@
     background-color: #7b7d7a;
     min-height: 100vh;
   }
-  .content-pokemon-details {
-    display: table-cell;
-    width: 1023px;
-    height: 100vh;
-    vertical-align: middle;
-    padding: 4rem;
-  }
   .content-pokemon-list,
   .content-my-pokemon-list {
     display: table-cell;
@@ -54,6 +47,38 @@
               margin-right: 0;
             }
           }
+        }
+      }
+    }
+  }
+  .content-pokemon-details {
+    padding: 4rem;
+    .back-button-wrapper {
+      position: relative;
+      .arrow-back {
+        width: 24px;
+      }
+      .back-button {
+        position: absolute;
+        top: -10px;
+        left: -8px;
+        width: 40px;
+        height: 40px;
+        background-color: transparent;
+        cursor: pointer;
+        border-radius: 50%;
+        transition: all .25s ease;
+        &:hover {
+          background-color: rgba(0,0,0,.27)
+        }
+      }
+    }
+    .card-wrapper {
+      display: flex;
+      justify-content: center;
+      .m-card-detail {
+        .card-information {
+
         }
       }
     }
