--- a/src/components/molecules/Popup/styles.scss
+++ b/src/components/molecules/Popup/styles.scss
@@ -2,6 +2,8 @@
 @import "../../../assets/styles/helper/function", "../../../assets/styles/helper/mixin",  "../../../assets/styles/helper/variables";
 
 .m-popup {
+  visibility: hidden;
+  opacity: 0;
   overflow-wrap: break-word;
   position: fixed;
   left: 0;
@@ -11,6 +13,7 @@
   width: 100%;
   height: 100vh;
   z-index: 5;
+  transition: all .5s ease;
   .inner-popup {
     display: table;
     width: 100%;
@@ -34,6 +37,9 @@
       z-index: 1;
       box-shadow: 0 2px 6px 0 rgba(#000, 0.05);
       padding: 56px;
+      opacity: 0;
+      transform: scale(0.85);
+      transition: all .3s ease .2s;
       .popup-button-close {
         position: absolute;
         top: 32px;
@@ -61,6 +67,25 @@
           margin-bottom: 24px;
         }
       }
+    }
+  }
+  &.release {
+    .content-popup {
+      height: auto;
+    }
+    .detail-popup {
+      .pokemon-info {
+        height: 150px;
+        overflow-y: scroll;
+      }
+    }
+  }
+  &.show-popup {
+    opacity: 1;
+    visibility: visible;
+    .content-popup {
+      opacity: 1;
+      transform: scale(1);
     }
   }
 }
