--- a/src/container/pages/Home/styles.scss
+++ b/src/container/pages/Home/styles.scss
@@ -12,12 +12,8 @@
   }
   .content-pokemon-list,
   .content-my-pokemon-list {
-    display: table-cell;
-    width: 1023px;
-    height: 100vh;
-    vertical-align: middle;
     text-align: center;
-    padding: 4rem;
+    padding: 8rem 4rem;
     @include clearfix();
     ul {
       margin-left: 0;
@@ -52,7 +48,7 @@
     }
   }
   .content-pokemon-details {
-    padding: 4rem;
+    padding: 1rem 4rem;
     .back-button-wrapper {
       position: relative;
       .arrow-back {
@@ -78,9 +74,92 @@
       justify-content: center;
       .m-card-detail {
         .card-information {
-
+          display: table-cell;
+          vertical-align: middle;
+          padding: 30px 12px;
+          width: 450px;
+          .card-type {
+            li {
+              margin-right: 12px;
+              display: inline-block;
+              .type-list {
+                text-transform: uppercase;
+                color: #fff;
+                padding: 4px 12px;
+                margin-bottom: 12px;
+                display: block;
+              }
+              &:last-child {
+                margin-right: 0;
+              }
+            }
+          }
+          .card-stats {
+            margin-top: 16px;
+            .card-stats-list {
+              p {
+                display: inline-block;
+                width: 100px;
+                font-size: 12px;
+                font-weight: 400;
+              }
+              .card-stats-name {
+                display: inline-block;
+                background-color: #ebeae8;
+                margin-bottom: 12px;
+                border-radius: 20px;
+                width: 75%;
+                height: 20px;
+              }
+              .card-stats-bar {
+                background-color: green;
+                text-align: center;
+                color: white;
+                border-radius: 20px;
+                height: 20px;
+                padding: 5px;
+                &:last-child {
+                  margin-bottom: 0;
+                }
+              }
+            }
+          }
+        }
+        .card-moves-list {
+          height: 300px;
+          overflow: hidden;
+          overflow-y: scroll;
+          .card-moves-header {
+            width: 100%;
+            height: 50px;
+            padding: 0 24px;
+            text-align: center;
+            padding: 16px 0;
+            margin-bottom: 0;
+          }
+          ul {
+            padding: 16px 24px;
+            li {
+              .moves-index {
+                font-size: 16px;
+                display: inline-block;
+                width: 70px;
+              }
+              .moves-list {
+                display: inline-block;
+                font-size: 16px;
+                text-transform: capitalize;
+              }
+            }
+          }
         }
       }
     }
+  }
+  .pokemon-list {
+    display: inline-block;
+    width: 20%;
+    margin-bottom: 12px;
+    padding: 0 12px;
   }
 }
