--- a/src/components/molecules/CardDetailList/styles.scss
+++ b/src/components/molecules/CardDetailList/styles.scss
@@ -2,8 +2,11 @@
 @import "../../../assets/styles/helper/function", "../../../assets/styles/helper/mixin",  "../../../assets/styles/helper/variables";
 
 .m-card-detail-list {
-  background-color: #fff;
+  width: 100%;
+  background-color: #dee0e3;
   position: relative;
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px 0 rgba(#000, 0.2);
   .button-detail {
     opacity: 0;
     cursor: pointer;
@@ -12,6 +15,7 @@
     left: 0;
     width: 100%;
     height: 0;
+    border-radius: 10px;
     background-color: rgba(43,43,43,.8);
     transition: all .35s ease;
   }
@@ -47,9 +51,6 @@
       transform: translateY(-5px);
     }
   }
-  .a-card {
-    height: 180px;
-  }
   .pokemon-list-info {
     background-color: red;
     .pokemon-name {
@@ -61,7 +62,7 @@
       margin-bottom: 0;
     }
     .pokemon-list-type {
-      background-color: blue;
+      background-color: #e0dcd1;
       ul {
         padding: 12px 0;
       }
@@ -79,6 +80,18 @@
           padding: 4px 12px;
           margin-bottom: 0;
           color: #fff;
+        }
+      }
+    }
+  }
+  &.show-loading-animation {
+    background-color: transparent;
+    .container-skeleton {
+      .rect-shape {
+        height: 222px !important;
+        border-radius: 10px;
+        @include large {
+          width: 165px !important;
         }
       }
     }
