--- a/src/components/molecules/Header/styles.scss
+++ b/src/components/molecules/Header/styles.scss
@@ -3,31 +3,31 @@
 
 .m-header {
   width: 100%;
-  height: 40px;
-  background-color: red;
+  height: 50px;
+  background-color: rgb(255, 71, 71);
   .header-centering {
-    position: relative;
-    height: 40px;
+    display: flex;
+    justify-content: center;
+    padding: 8px 0;
     .header-list {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
       @include clearfix();
       .header-content {
         text-align: center;
         float: left;
         margin-left: 4rem;
         font-size: 1.2rem;
+        font-weight: 800;
         width: 120px;
         height: 40px;
         padding: 1.2rem 0;
-        background-color: blue;
         cursor: pointer;
         color: white;
         transition: all .25s ease;
         &:hover {
-          background-color: rgba(0,0,255, .6);
+          opacity: 0.6;
+        }
+        &:first-child {
+          margin-left: 0;
         }
       }
     }
