--- a/src/components/molecules/Popup/styles.scss
+++ b/src/components/molecules/Popup/styles.scss
@@ -20,7 +20,6 @@
     height: 100%;
     padding: 64px 0px;
     background-color: rgba(0,0,0,.5);
-    table-layout: fixed;
     .centered-popup {
       display: table-cell;
       vertical-align: middle;
@@ -54,11 +53,13 @@
         outline: 0;
         text-align: center;
         background-color: transparent;
-        .arrow-back {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
+        .arrow-close {
+          transition: all .25s ease;
+        }
+        &:hover {
+          .arrow-close {
+            transform: rotate(180deg);
+          }
         }
       }
       .submit-popup {
