--- a/src/assets/styles/helper/_mixin.scss
+++ b/src/assets/styles/helper/_mixin.scss
@@ -2,25 +2,25 @@
    MIXIN
    ========================================================================== */
 
-   @mixin large {
-    @media only screen and (min-width: screen(large)) {
-      @content;
-    }
+@mixin large {
+  @media only screen and (min-width: screen(large)) {
+    @content;
   }
-  
-  @mixin medium {
-    @media only screen and (min-width: screen(medium)) {
-      @content;
-    }
+}
+
+@mixin medium {
+  @media only screen and (min-width: screen(medium)) {
+    @content;
   }
-    
-  @mixin clearfix() {
-    &:before,
-    &:after {
-      content: " ";
-      display: table;
-    }
-    &:after {
-      clear: both;
-    }
+}
+
+@mixin clearfix() {
+  &:before,
+  &:after {
+    content: ' ';
+    display: table;
   }
+  &:after {
+    clear: both;
+  }
+}
