--- a/src/components/atoms/Loading/styles.scss
+++ b/src/components/atoms/Loading/styles.scss
@@ -1,5 +1,7 @@
 // import mixin and variables
-@import "../../../assets/styles/helper/function", "../../../assets/styles/helper/mixin",  "../../../assets/styles/helper/variables";
+@import '../../../assets/styles/helper/function',
+  '../../../assets/styles/helper/mixin',
+  '../../../assets/styles/helper/variables';
 
 .a-loading {
   opacity: 0;
@@ -12,8 +14,8 @@
   width: 100%;
   height: 100vh;
   z-index: 5;
-  transition: all .5s ease;
-  background-color: rgba(0,0,0,.5);
+  transition: all 0.5s ease;
+  background-color: rgba(0, 0, 0, 0.5);
   svg {
     opacity: 0;
     visibility: hidden;
@@ -48,7 +50,8 @@
       animation: animate 4s linear infinite;
     }
     @keyframes animate {
-      0%, 100% {
+      0%,
+      100% {
         stroke-dashoffset: 440;
       }
       50% {
