--- a/src/components/molecules/CardDetail/styles.scss
+++ b/src/components/molecules/CardDetail/styles.scss
@@ -1,5 +1,7 @@
 // import mixin and variables
-@import "../../../assets/styles/helper/function", "../../../assets/styles/helper/mixin",  "../../../assets/styles/helper/variables";
+@import '../../../assets/styles/helper/function',
+  '../../../assets/styles/helper/mixin',
+  '../../../assets/styles/helper/variables';
 
 .m-card-detail {
   max-width: 700px;
