--- a/src/components/molecules/CardDetailList/styles.scss
+++ b/src/components/molecules/CardDetailList/styles.scss
@@ -1,5 +1,7 @@
 // import mixin and variables
-@import "../../../assets/styles/helper/function", "../../../assets/styles/helper/mixin",  "../../../assets/styles/helper/variables";
+@import '../../../assets/styles/helper/function',
+  '../../../assets/styles/helper/mixin',
+  '../../../assets/styles/helper/variables';
 
 .m-card-detail-list {
   width: 100%;
@@ -16,8 +18,8 @@
     width: 100%;
     height: 0;
     border-radius: 10px;
-    background-color: rgba(43,43,43,.8);
-    transition: all .35s ease;
+    background-color: rgba(43, 43, 43, 0.8);
+    transition: all 0.35s ease;
   }
   .a-button {
     opacity: 0;
@@ -39,7 +41,7 @@
     }
   }
   &.link {
-    transition: transform .25s ease;
+    transition: transform 0.25s ease;
     a {
       position: absolute;
       top: 0;
