--- a/src/components/molecules/Popup/styles.scss
+++ b/src/components/molecules/Popup/styles.scss
@@ -1,5 +1,7 @@
 // import mixin and variables
-@import "../../../assets/styles/helper/function", "../../../assets/styles/helper/mixin",  "../../../assets/styles/helper/variables";
+@import '../../../assets/styles/helper/function',
+  '../../../assets/styles/helper/mixin',
+  '../../../assets/styles/helper/variables';
 
 .m-popup {
   visibility: hidden;
@@ -13,13 +15,13 @@
   width: 100%;
   height: 100vh;
   z-index: 5;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
   .inner-popup {
     display: table;
     width: 100%;
     height: 100%;
     padding: 64px 0px;
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(0, 0, 0, 0.5);
     .centered-popup {
       display: table-cell;
       vertical-align: middle;
@@ -38,7 +40,7 @@
       padding: 56px;
       opacity: 0;
       transform: scale(0.85);
-      transition: all .3s ease .2s;
+      transition: all 0.3s ease 0.2s;
       .popup-button-close {
         position: absolute;
         top: 32px;
@@ -54,7 +56,7 @@
         text-align: center;
         background-color: transparent;
         .arrow-close {
-          transition: all .25s ease;
+          transition: all 0.25s ease;
         }
         &:hover {
           .arrow-close {
